MS-339 : fix position cart icon on mobile

--- a/skin/frontend/indexliving/default/css/responsive.css
+++ b/skin/frontend/indexliving/default/css/responsive.css
@@ -2969,7 +2969,7 @@
 
 @media (max-width: 640px) {
     .products-grid .button.btn-cart > span:before {
-        top: 0px;
+       /* top: 0px;*/
         background-size: 80px auto;
         background-position: 3px -674px
     }
@@ -3021,7 +3021,7 @@
     }
 
     .button.btn-cart > span:before {
-        top: 0px;
+        /*top: 0px;*/
         background-size: 80px auto;
         background-position: 3px -668px
     }
